erDiagram
    KULLANICI ||--o| PROFIL : "sahiptir"
    KULLANICI ||--o{ KULUP_UYESI : "üyedir"
    KULUP ||--o{ KULUP_UYESI : "içerir"
    KULUP ||--o{ ETKINLIK : "düzenler"
    ETKINLIK ||--o{ ETKINLIK_KATILIMI : "alır"
    KULLANICI ||--o{ ETKINLIK_KATILIMI : "katılır"
    KULLANICI ||--o{ TESIS_REZERVASYON : "yapar"
    TESIS ||--o{ TESIS_KAYNAGI : "içerir"
    TESIS_KAYNAGI ||--o{ TESIS_REZERVASYON : "rezerve edilir"

    KULLANICI {
        uuid id PK
        string eposta
        string rol
        boolean epostaDogrulandi
        string durum
    }
    PROFIL {
        uuid id PK
        uuid kullaniciId FK
        string ad
        string bolum
    }
    KULUP {
        uuid id PK
        string ad
        uuid yoneticiKullaniciId
        boolean silindi
    }
    ETKINLIK {
        uuid id PK
        uuid kulupId FK
        string durum
        int kapasite
    }
    ETKINLIK_KATILIMI {
        uuid id PK
        uuid etkinlikId FK
        uuid kullaniciId FK
        string durum
    }
    TESIS_REZERVASYON {
        uuid id PK
        uuid kaynakId FK
        uuid kullaniciId FK
        datetime baslangic
        datetime bitis
    }
